--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@glidejs/glide": "^3.6.2",
     "axios": "^1.7.2",
+    "motion": "^10.18.0",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
     "vue-router": "^4.4.0"
